--- a/css/styles.css
+++ b/css/styles.css
@@ -170,19 +170,34 @@ margin-bottom:20px;
 ul.icon a {
 height:30px;
 width:20px;
-background-color:#222;
 border-radius:50%;
 padding:10px;
 }
 
-.fbHover:hover{
+.fbIcon{
 background-color:#3b5998;
 }
 
-.inHover:hover{
+.fbIcon:hover{
+background-color:#2F477A;
+}
+
+.inIcon{
 background-color:#4875B4;
 }
 
-.mailHover:hover{
+.inIcon:hover{
+background-color:#3A5E90;
+}
+
+.mailIcon{
 background-color:#dd4b39;
+}
+
+.mailIcon:hover{
+background-color:#C74433;
+}
+
+.logo{
+margin-left:50px;
 }
